--- a/src/pages/Projects/ProjectList.scss
+++ b/src/pages/Projects/ProjectList.scss
@@ -44,6 +44,7 @@ $project_tile_height: 350px;
 		.bg-img {
 			height: 100%;
 			width: 100%;
+			background-color: lightgrey;
 			background-size: cover;
 			background-position: 50% 50%;
 		}
